# threshold_estimation

./: .gitignore  CLAUDE.md  README.md  check_grid.py  check_tolerance.py  environment.yml  pyproject.toml
simulations/: .gitignore  README.md
simulations/experiments/: e1_criterion.py  e2_rate.py  e3_limit.py  e4_as_if_known.py  e5_endogeneity.py  e6_thin_regimes.py
simulations/tests/: test_config.py  test_dgp.py  test_identification.py  test_likelihood.py
simulations/threshold_estimation/: __init__.py  analytics.py  config.py  dgp.py  estimation.py  likelihood.py
